--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>My project</h1>
+  </body>
 </html>
-sdadasdad
